added second line

--- a/index.htm
+++ b/index.htm
@@ -47,6 +47,25 @@
                 Cart
             </div>
         </div>
+
+
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="panel-ops">
+                <p>Today's Deals</p>
+                <p>Registry</p>
+                <p>Prime Video</p>
+                <p>Gift Cards</p>
+                <p>Customer Service</p>
+                <p>Sell</p>
+            </div>
+            <div class="panel-deals">
+                Shop deals in Eelectronics
+            </div>
+        </div>
     </header>
 </body>
 </html>
