--- a/index.htm
+++ b/index.htm
@@ -49,18 +49,18 @@
         </div>
 
 
-        <div class="panel">
-            <div class="panel-all">
+        <div class="panel ">
+            <div class="panel-all ">
                 <i class="fa-solid fa-bars"></i>
                 All
             </div>
-            <div class="panel-ops">
-                <p>Today's Deals</p>
-                <p>Registry</p>
-                <p>Prime Video</p>
-                <p>Gift Cards</p>
-                <p>Customer Service</p>
-                <p>Sell</p>
+            <div class="panel-ops ">
+                <p class="border">Today's Deals</p>
+                <p class="border">Registry</p>
+                <p class="border">Prime Video</p>
+                <p class="border">Gift Cards</p>
+                <p class="border">Customer Service</p>
+                <p class="border">Sell</p>
             </div>
             <div class="panel-deals">
                 Shop deals in Eelectronics
