--- a/index.htm
+++ b/index.htm
@@ -50,11 +50,11 @@
 
 
         <div class="panel ">
-            <div class="panel-all ">
+            <div class="panel-all border">
                 <i class="fa-solid fa-bars"></i>
                 All
             </div>
-            <div class="panel-ops ">
+            <div class="panel-ops">
                 <p class="border">Today's Deals</p>
                 <p class="border">Registry</p>
                 <p class="border">Prime Video</p>
