--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@
                 Cart
             </div>
         </div>
-        
+
 
         <div class="panel ">
             <div class="panel-all border">
@@ -67,5 +67,9 @@
             </div>
         </div>
     </header>
+
+    <div class="hero-section">
+        
+    </div>
 </body>
 </html>
