--- a/index.htm
+++ b/index.htm
@@ -79,7 +79,7 @@
 
     <div class="shop-section">
         <div class="box1 box">
-            <h2>Health & Personal Care</h2>
+            <h2>Upgrade your office furniture</h2>
             <div class="box-img" style="background-image: url();"></div>
             <p>See more</p>
         </div>
