--- a/index.htm
+++ b/index.htm
@@ -79,14 +79,15 @@
 
     <div class="shop-section">
         <div class="box1 box">
-            <h2>Upgrade your office furniture</h2>
-            <div class="box-img" style="background-image: url();"></div>
-            <p>See more</p>
+            <div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(lets.jpg);"></div>
+                <p>See more </p>
+            </div>
         </div>
         <div class="box2 box">box2</div>
         <div class="box3 box">box3</div>
         <div class="box4 box">box4</div>
     </div>
-
 </body>
 </html>
