--- a/index.htm
+++ b/index.htm
@@ -85,9 +85,24 @@
                 <p>See more </p>
             </div>
         </div>
-        <div class="box2 box">box2</div>
-        <div class="box3 box">box3</div>
-        <div class="box4 box">box4</div>
+        <div class="box2 box"><div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(lets.jpg);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box3 box"><div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(lets.jpg);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box4 box"><div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(lets.jpg);"></div>
+                <p>See more </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
