--- a/index.htm
+++ b/index.htm
@@ -86,8 +86,8 @@
             </div>
         </div>
         <div class="box2 box"><div class="box-content">
-                <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(lets.jpg);"></div>
+                <h2> New home arrivals under $50</h2>
+                <div class="box-img" style="background-image: url(2nd.png);"></div>
                 <p>See more </p>
             </div>
         </div>
