--- a/index.htm
+++ b/index.htm
@@ -81,7 +81,7 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(lets.jpg);"></div>
+                <div class="box-img" style="background-image: url(1st.jpg);"></div>
                 <p>See more </p>
             </div>
         </div>
