--- a/index.htm
+++ b/index.htm
@@ -93,13 +93,13 @@
         </div>
         <div class="box3 box"><div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(lets.jpg);"></div>
+                <div class="box-img" style="background-image: url(3rd.png);"></div>
                 <p>See more </p>
             </div>
         </div>
         <div class="box4 box"><div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(lets.jpg);"></div>
+                <div class="box-img" style="background-image: url(4th.jpg);"></div>
                 <p>See more </p>
             </div>
         </div>
