--- a/index.htm
+++ b/index.htm
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="box2 box"><div class="box-content">
-                <h2> New home arrivals under $50</h2>
+                <h2> New home arrivals</h2>
                 <div class="box-img" style="background-image: url(2nd.png);"></div>
                 <p>See more </p>
             </div>
