--- a/index.htm
+++ b/index.htm
@@ -103,6 +103,58 @@
                 <p>See more </p>
             </div>
         </div>
+
+        <div class="box1 box">
+            <div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(1st.jpg);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box2 box"><div class="box-content">
+                <h2> New home arrivals</h2>
+                <div class="box-img" style="background-image: url(2nd.png);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box3 box"><div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(3rd.png);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box4 box"><div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(4th.jpg);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+
+        <div class="box1 box">
+            <div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(1st.jpg);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box2 box"><div class="box-content">
+                <h2> New home arrivals</h2>
+                <div class="box-img" style="background-image: url(2nd.png);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box3 box"><div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(3rd.png);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box4 box"><div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(4th.jpg);"></div>
+                <p>See more </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
