--- a/index.htm
+++ b/index.htm
@@ -85,19 +85,22 @@
                 <p>See more </p>
             </div>
         </div>
-        <div class="box2 box"><div class="box-content">
+        <div class="box2 box">
+            <div class="box-content">
                 <h2> New home arrivals</h2>
                 <div class="box-img" style="background-image: url(2nd.png);"></div>
                 <p>See more </p>
             </div>
         </div>
-        <div class="box3 box"><div class="box-content">
+        <div class="box3 box">
+            <div class="box-content">
                 <h2> Laptops for every need</h2>
                 <div class="box-img" style="background-image: url(3rd.png);"></div>
                 <p>See more </p>
             </div>
         </div>
-        <div class="box4 box"><div class="box-content">
+        <div class="box4 box">
+            <div class="box-content">
                 <h2> Laptops for every need</h2>
                 <div class="box-img" style="background-image: url(4th.jpg);"></div>
                 <p>See more </p>
@@ -107,51 +110,97 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(1st.jpg);"></div>
+                <div class="box-img" style="background-image: url(5th.png);"></div>
                 <p>See more </p>
             </div>
         </div>
-        <div class="box2 box"><div class="box-content">
+        <div class="box2 box">
+            <div class="box-content">
                 <h2> New home arrivals</h2>
-                <div class="box-img" style="background-image: url(2nd.png);"></div>
+                <div class="box-img" style="background-image: url(6th.png);"></div>
                 <p>See more </p>
             </div>
         </div>
-        <div class="box3 box"><div class="box-content">
+        <div class="box3 box">
+            <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(3rd.png);"></div>
+                <div class="box-img" style="background-image: url(7th.png);"></div>
                 <p>See more </p>
             </div>
         </div>
-        <div class="box4 box"><div class="box-content">
+        <div class="box4 box">
+            <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(4th.jpg);"></div>
+                <div class="box-img" style="background-image: url(8th.png);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="shop-le">
+        <div class="boxy">
+            <div class="boxy-content">
+                <h2>Popular items this season</h2>
+                <div class="boxy-img" style="background-image: url(13th.png);"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="shop-section">
+         <div class="box1 box">
+            <div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(9th.png);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2> New home arrivals</h2>
+                <div class="box-img" style="background-image: url(10th.png);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(11th.png);"></div>
+                <p>See more </p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2> Laptops for every need</h2>
+                <div class="box-img" style="background-image: url(12th.png);"></div>
                 <p>See more </p>
             </div>
         </div>
 
-        <div class="box1 box">
+            <div class="box1 box">
             <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(1st.jpg);"></div>
+                <div class="box-img" style="background-image: url(9th.png);"></div>
                 <p>See more </p>
             </div>
         </div>
-        <div class="box2 box"><div class="box-content">
+        <div class="box2 box">
+            <div class="box-content">
                 <h2> New home arrivals</h2>
-                <div class="box-img" style="background-image: url(2nd.png);"></div>
+                <div class="box-img" style="background-image: url(10th.png);"></div>
                 <p>See more </p>
             </div>
         </div>
-        <div class="box3 box"><div class="box-content">
+        <div class="box3 box">
+            <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(3rd.png);"></div>
+                <div class="box-img" style="background-image: url(11th.png);"></div>
                 <p>See more </p>
             </div>
         </div>
-        <div class="box4 box"><div class="box-content">
+        <div class="box4 box">
+            <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(4th.jpg);"></div>
+                <div class="box-img" style="background-image: url(12th.png);"></div>
                 <p>See more </p>
             </div>
         </div>
