done with panel 1

--- a/index.htm
+++ b/index.htm
@@ -207,7 +207,9 @@
     </div>
 
     <footer>
-        
+        <div class="foot-panel1">
+            Back to top
+        </div>
     </footer>
 </body>
 </html>
