starting with foot-panel3

--- a/index.htm
+++ b/index.htm
@@ -210,6 +210,7 @@
         <div class="foot-panel1">
             Back to top
         </div>
+
         <div class="foot-panel2">
             <ul>
                <p>Get to Know Us </p>
@@ -241,7 +242,7 @@
                <a>Reload Your Balance</a>
                <a>Amazon Currency Converter</a>
             </ul>
-            
+
             <ul>
                <p> Let Us Help You</p>
                <a>Amazon and COVID-19</a>
@@ -252,6 +253,10 @@
                <a>Manage Your Content and Devices</a>
                <a>Help</a>
             </ul>
+        </div>
+
+        <div class="foot-panel3">
+
         </div>
     </footer>
 </body>
