done with panel4

--- a/index.htm
+++ b/index.htm
@@ -256,7 +256,9 @@
         </div>
 
         <div class="foot-panel3">
-
+            <div class="logo2">
+                
+            </div>
         </div>
     </footer>
 </body>
