starting with panel 4

--- a/index.htm
+++ b/index.htm
@@ -257,6 +257,16 @@
 
         <div class="foot-panel3">
             <div class="logo2">
+            </div>
+        </div>
+
+        <div class="foot-panel4">
+            <div class="pages">
+                <p>Conditions of Use & Sale</p>
+                <p>Privacy Notice</p>
+                <p>Interest-Based Ads</p>
+            </div>
+            <div class="copyright">
                 
             </div>
         </div>
