--- a/index.htm
+++ b/index.htm
@@ -267,7 +267,7 @@
                 <p>Interest-Based Ads</p>
             </div>
             <div class="copyright">
-                
+                © 1996-2025, Amazon.com, Inc. or its affiliates
             </div>
         </div>
     </footer>
