--- a/index.htm
+++ b/index.htm
@@ -176,35 +176,35 @@
             </div>
         </div>
 
-            <div class="box1 box">
+   <div class="box1 box">
             <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(9th.png);"></div>
+                <div class="box-img" style="background-image: url(1st.jpg);"></div>
                 <p>See more </p>
             </div>
         </div>
+        
         <div class="box2 box">
             <div class="box-content">
                 <h2> New home arrivals</h2>
-                <div class="box-img" style="background-image: url(10th.png);"></div>
+                <div class="box-img" style="background-image: url(2nd.png);"></div>
                 <p>See more </p>
             </div>
         </div>
         <div class="box3 box">
             <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(11th.png);"></div>
+                <div class="box-img" style="background-image: url(3rd.png);"></div>
                 <p>See more </p>
             </div>
         </div>
         <div class="box4 box">
             <div class="box-content">
                 <h2> Laptops for every need</h2>
-                <div class="box-img" style="background-image: url(12th.png);"></div>
+                <div class="box-img" style="background-image: url(4th.jpg);"></div>
                 <p>See more </p>
             </div>
         </div>
-    </div>
 
     <footer>
         <div class="foot-panel1">
