--- a/index.htm
+++ b/index.htm
@@ -176,14 +176,13 @@
             </div>
         </div>
 
-   <div class="box1 box">
+        <div class="box1 box">
             <div class="box-content">
                 <h2> Laptops for every need</h2>
                 <div class="box-img" style="background-image: url(1st.jpg);"></div>
                 <p>See more </p>
             </div>
         </div>
-        
         <div class="box2 box">
             <div class="box-content">
                 <h2> New home arrivals</h2>
@@ -205,6 +204,7 @@
                 <p>See more </p>
             </div>
         </div>
+    </div>
 
     <footer>
         <div class="foot-panel1">
@@ -267,7 +267,7 @@
                 <p>Interest-Based Ads</p>
             </div>
             <div class="copyright">
-                © 1996-2025, Amazon.com, Inc. or its affiliates
+                <p>© 1996-2023, Amazon.com, Inc. or its affiliates</p>
             </div>
         </div>
     </footer>
