--- a/index.htm
+++ b/index.htm
@@ -92,7 +92,7 @@
                 <p>See more </p>
             </div>
         </div>
-        <div class="box3 box">
+        <div class="box3 box">f
             <div class="box-content">
                 <h2> Laptops for every need</h2>
                 <div class="box-img" style="background-image: url(3rd.png);"></div>
